--- a/Memorizer/app/src/main/res/layout/activity_main.xml
+++ b/Memorizer/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,53 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/title"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Memorizer v1.0"
+        android:textSize="30sp"
+        android:textColor="#6e166e"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/sequence_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="13dp"
+        android:background="@drawable/sequence_icon"
+        android:src="@drawable/sequence_icon"/>
+
+    <ImageButton
+        android:id="@+id/numbermemory_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sequence_button"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/numbermemory_icon"
+        android:src="@drawable/numbermemory_icon"/>
+
+    <ImageButton
+            android:id="@+id/visualmemory_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/numbermemory_button"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/visualmemory_icon"
+            android:src="@drawable/visualmemory_icon" />
+
+    <ImageButton
+            android:id="@+id/comingsoon_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/visualmemory_button"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/comingsoon_icon"
+            android:src="@drawable/comingsoon_icon" />
+
+</RelativeLayout>
