--- a/Memorizer/app/src/main/res/layout/activity_main.xml
+++ b/Memorizer/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background = "@drawable/gradient_drawable">
 
     <TextView
         android:id="@+id/title"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:text="Memorizer v1.0"
-        android:textSize="30sp"
         android:textColor="#6e166e"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -27,7 +28,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="13dp"
         android:background="@drawable/sequence_icon"
-        android:src="@drawable/sequence_icon"/>
+        android:src="@drawable/sequence_icon" />
 
     <ImageButton
         android:id="@+id/numbermemory_button"
@@ -36,24 +37,24 @@
         android:layout_below="@+id/sequence_button"
         android:layout_centerHorizontal="true"
         android:background="@drawable/numbermemory_icon"
-        android:src="@drawable/numbermemory_icon"/>
+        android:src="@drawable/numbermemory_icon" />
 
     <ImageButton
-            android:id="@+id/visualmemory_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/numbermemory_button"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/visualmemory_icon"
-            android:src="@drawable/visualmemory_icon" />
+        android:id="@+id/visualmemory_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/numbermemory_button"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/visualmemory_icon"
+        android:src="@drawable/visualmemory_icon" />
 
     <ImageButton
-            android:id="@+id/comingsoon_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/visualmemory_button"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/comingsoon_icon"
-            android:src="@drawable/comingsoon_icon" />
+        android:id="@+id/comingsoon_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/visualmemory_button"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/comingsoon_icon"
+        android:src="@drawable/comingsoon_icon" />
 
 </RelativeLayout>
