Added a Toast Message for the coming soon button. Fixed Styling of the activities. Added a logo for the app.

--- a/Memorizer/app/src/main/res/layout/activity_main.xml
+++ b/Memorizer/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:fontFamily="@font/lobster"
         android:text="Memorizer v1.0"
-        android:textColor="#6e166e"
-        android:textSize="30sp"
+        android:textColor="#AB00FF"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
