--- a/Memorizer/app/src/main/res/layout/gameover_layout.xml
+++ b/Memorizer/app/src/main/res/layout/gameover_layout.xml
@@ -1,86 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/gameOverRelativeLayout"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="10dp"
-    android:paddingTop="10dp">
+    android:fillViewport="true">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/gameOverRelativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp">
 
-    <TextView
-        android:id="@+id/gameOverTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
-        android:layout_marginBottom="15dp"
-        android:fontFamily="@font/bauhs93"
-        android:text="Game \n Over"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="80sp" />
+        <TextView
+            android:id="@+id/gameOverTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="55dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/bauhs93"
+            android:text="Game \n Over"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="80sp" />
 
-    <TextView
-        android:id="@+id/yourScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/gameOverTitle"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="0dp"
-        android:fontFamily="@font/staatliches"
-        android:text="Your Score:"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="30sp" />
+        <TextView
+            android:id="@+id/yourScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/gameOverTitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="0dp"
+            android:fontFamily="@font/staatliches"
+            android:text="Your Score:"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="30sp" />
 
-    <TextView
-        android:id="@+id/highscore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/yourScore"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:fontFamily="@font/staatliches"
-        android:text="Highscore:"
-        android:textColor="#000000"
-        android:textSize="30sp" />
+        <TextView
+            android:id="@+id/highscore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/yourScore"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/staatliches"
+            android:text="Highscore:"
+            android:textColor="#000000"
+            android:textSize="30sp" />
 
-    <ImageButton
-        android:id="@+id/homeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/home_button"
-        android:src="@drawable/home_button"
-        app:srcCompat="@drawable/home_button" />
+        <ImageButton
+            android:id="@+id/homeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/home_button"
+            android:src="@drawable/home_button"
+            app:srcCompat="@drawable/home_button" />
 
-    <Button
-        android:id="@+id/statisticsButton"
-        android:layout_width="230dp"
-        android:layout_height="78dp"
-        android:layout_below="@+id/highscore"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="7.5dp"
-        android:backgroundTint="@android:color/white"
-        android:fontFamily="@font/staatliches"
-        android:text="STATISTICS"
-        android:textColor="@android:color/black"
-        android:textSize="40sp" />
+        <Button
+            android:id="@+id/statisticsButton"
+            android:layout_width="230dp"
+            android:layout_height="78dp"
+            android:layout_below="@+id/highscore"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="7.5dp"
+            android:backgroundTint="@android:color/white"
+            android:fontFamily="@font/staatliches"
+            android:text="STATISTICS"
+            android:textColor="@android:color/black"
+            android:textSize="40sp" />
 
-    <Button
-        android:id="@+id/playAgainButton"
-        android:layout_width="230dp"
-        android:layout_height="78dp"
-        android:layout_below="@+id/statisticsButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="7.5dp"
-        android:layout_marginBottom="15dp"
-        android:backgroundTint="@android:color/white"
-        android:fontFamily="@font/staatliches"
-        android:text="PLAY AGAIN"
-        android:textColor="@android:color/black"
-        android:textSize="40sp" />
-</RelativeLayout>
+        <Button
+            android:id="@+id/playAgainButton"
+            android:layout_width="230dp"
+            android:layout_height="78dp"
+            android:layout_below="@+id/statisticsButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="7.5dp"
+            android:layout_marginBottom="15dp"
+            android:backgroundTint="@android:color/white"
+            android:fontFamily="@font/staatliches"
+            android:text="PLAY AGAIN"
+            android:textColor="@android:color/black"
+            android:textSize="40sp" />
+    </RelativeLayout>
+</ScrollView>
