--- a/Memorizer/app/src/main/res/layout/fragment_number2.xml
+++ b/Memorizer/app/src/main/res/layout/fragment_number2.xml
@@ -26,6 +26,7 @@
         android:layout_below="@+id/what_number"
         android:layout_centerHorizontal="true"
         android:inputType="number"
+        android:hint="Number"
         android:fontFamily="@font/staatliches"
         android:shadowColor="@color/black"
         android:textColor="@android:color/black"
