--- a/Memorizer/app/src/main/res/layout/number_layout.xml
+++ b/Memorizer/app/src/main/res/layout/number_layout.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/number_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:textAlignment="center">
 
-    <fragment
+    <!-- <fragment
         android:id="@+id/fragment"
         android:name="dtu.softproj.memorizer.NumberFragment1"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" /> -->
+
+    <FrameLayout
+        android:id="@+id/flFragment"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+    />
 
 </RelativeLayout>
