--- a/Memorizer/app/src/main/res/layout/fragment_number2.xml
+++ b/Memorizer/app/src/main/res/layout/fragment_number2.xml
@@ -40,12 +40,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="275dp"
         android:layout_marginBottom="15dp"
-        android:backgroundTint="@android:color/white"
         android:fontFamily="@font/staatliches"
         android:shadowColor="@color/black"
         android:text="SUBMIT"
         android:textColor="@android:color/black"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:background="@drawable/rounded_button"/>
 
 
 </RelativeLayout>
