--- a/Memorizer/app/src/main/res/layout/play_layout.xml
+++ b/Memorizer/app/src/main/res/layout/play_layout.xml
@@ -69,12 +69,12 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:backgroundTint="@android:color/white"
             android:fontFamily="@font/staatliches"
             android:shadowColor="@color/black"
             android:text="PLAY"
             android:textColor="@android:color/black"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            android:background="@drawable/rounded_button"/>
 
     </RelativeLayout>
 </ScrollView>
