--- a/Memorizer/app/src/main/res/layout/fragment_number3.xml
+++ b/Memorizer/app/src/main/res/layout/fragment_number3.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#88FF98"
-    tools:context=".NumberFragment3">
+    tools:context=".numberMemoryGame.NumberFragment3">
 
     <ImageView
         android:id="@+id/ivCheckMark"
