--- a/Memorizer/app/src/main/res/layout/number_layout.xml
+++ b/Memorizer/app/src/main/res/layout/number_layout.xml
@@ -8,7 +8,7 @@
 
     <!-- <fragment
         android:id="@+id/fragment"
-        android:name="dtu.softproj.memorizer.NumberFragment1"
+        android:name="dtu.softproj.memorizer.numberMemoryGame.NumberFragment1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" /> -->
 
