--- a/Memorizer/app/src/main/res/layout/play_layout.xml
+++ b/Memorizer/app/src/main/res/layout/play_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:id="@+id/playRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -65,7 +65,7 @@
             android:id="@+id/playbutton"
             android:layout_width="230dp"
             android:layout_height="78dp"
-            android:layout_below="@+id/gameHighScore"
+            android:layout_below="@+id/gameHighScoreValue"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
@@ -75,6 +75,20 @@
             android:textColor="@android:color/black"
             android:textSize="40sp"
             android:background="@drawable/rounded_button"/>
+
+        <TextView
+            android:id="@+id/gameHighScoreValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/gameHighScore"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/staatliches"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:text="User with xxx points" />
 
     </RelativeLayout>
 </ScrollView>
