--- a/Memorizer/app/src/main/res/layout/fragment_number3.xml
+++ b/Memorizer/app/src/main/res/layout/fragment_number3.xml
@@ -53,11 +53,11 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="15dp"
-        android:backgroundTint="@android:color/white"
         android:fontFamily="@font/staatliches"
         android:shadowColor="@color/black"
         android:text="NEXT"
         android:textColor="@android:color/black"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:background="@drawable/rounded_button" />
 
 </RelativeLayout>
