--- a/Memorizer/app/src/main/res/layout/gameover_layout.xml
+++ b/Memorizer/app/src/main/res/layout/gameover_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:id="@+id/gameOverRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -64,7 +64,7 @@
             android:id="@+id/statisticsButton"
             android:layout_width="230dp"
             android:layout_height="78dp"
-            android:layout_below="@+id/highscore"
+            android:layout_below="@+id/typeName"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="7.5dp"
@@ -87,6 +87,23 @@
             android:textColor="@android:color/black"
             android:textSize="40sp"
             android:background="@drawable/rounded_button"/>
+
+        <EditText
+            android:id="@+id/typeName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/highscore"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/staatliches"
+            android:hint="Type your name to save your highscore"
+            android:inputType="text"
+            android:shadowColor="@color/black"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textColorHint="#73AE7B"
+            android:textSize="25sp" />
 
 
     </RelativeLayout>
