Fixed progressbar and number-input in the number memory game.

--- a/Memorizer/app/src/main/res/layout/fragment_number2.xml
+++ b/Memorizer/app/src/main/res/layout/fragment_number2.xml
@@ -24,11 +24,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/what_number"
-        android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:focusable="auto"
+
+        android:focusableInTouchMode="true"
         android:fontFamily="@font/staatliches"
         android:hint="Number"
         android:inputType="number"
+        android:selectAllOnFocus="false"
         android:shadowColor="@color/black"
         android:textAlignment="center"
         android:textColor="@android:color/black"
