--- a/Memorizer/app/src/main/res/layout/fragment_number1.xml
+++ b/Memorizer/app/src/main/res/layout/fragment_number1.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/numberView"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginBottom="15dp"
@@ -22,11 +22,14 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/numberView"
+        android:layout_alignLeft="@+id/numberView"
+        android:layout_alignRight="@+id/numberView"
+        android:layout_centerHorizontal="true"
         android:max="100"
         android:progress="0"
-        android:layout_centerHorizontal="true" />
+        android:scaleY="4" />
 
 </RelativeLayout>
