--- a/Memorizer/app/src/main/res/layout/activity_main.xml
+++ b/Memorizer/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/lobster"
-            android:text="Memorizer v1.0"
+            android:text="Memorizer"
             android:textColor="#AB00FF"
             android:textSize="50sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -62,6 +62,21 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/comingsoon_icon"
             android:src="@drawable/comingsoon_icon" />
+
+        <ImageButton
+            android:id="@+id/statistic_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/title"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="35dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="3dp"
+            android:layout_marginBottom="2dp"
+            android:layout_toEndOf="@+id/title"
+            android:background="@null"
+            app:srcCompat="@drawable/statistic_icon" />
 
     </RelativeLayout>
 </ScrollView>
