--- a/Memorizer/app/src/main/res/layout/activity_main.xml
+++ b/Memorizer/app/src/main/res/layout/activity_main.xml
@@ -44,15 +44,24 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/numbermemory_icon"
             android:src="@drawable/numbermemory_icon" />
-
         <ImageButton
-            android:id="@+id/visualmemory_button"
+            android:id="@+id/verbalmemory_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/numbermemory_button"
             android:layout_centerHorizontal="true"
             android:background="@drawable/visualmemory_icon"
             android:src="@drawable/visualmemory_icon" />
+
+        <ImageButton
+            android:id="@+id/visualmemory_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/verbalmemory_button"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/visualmemory_icon"
+            android:src="@drawable/visualmemory_icon" />
+
 
         <ImageButton
             android:id="@+id/comingsoon_button"
