--- a/Memorizer/app/src/main/res/layout/statistics_layout.xml
+++ b/Memorizer/app/src/main/res/layout/statistics_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/stasticsRelativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,8 +32,24 @@
         android:layout_weight="0">
 
         <Button
+            android:id="@+id/verbalgamebutton"
+            android:layout_width="90dp"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_button"
+            android:fontFamily="@font/staatliches"
+            android:shadowColor="@color/black"
+            android:text="Verbal"
+            android:textAllCaps="false"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/numbergamebutton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
             android:id="@+id/sequencegamebutton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="60dp"
             android:background="@drawable/rounded_button"
             android:fontFamily="@font/staatliches"
@@ -43,12 +60,12 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/numbergamebutton"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/visualgamebutton"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/numbergamebutton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="60dp"
             android:background="@drawable/rounded_button"
             android:fontFamily="@font/staatliches"
@@ -57,14 +74,14 @@
             android:textAllCaps="false"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/visualgamebutton"
+            app:layout_constraintEnd_toStartOf="@+id/verbalgamebutton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/sequencegamebutton"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/visualgamebutton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="60dp"
             android:background="@drawable/rounded_button"
             android:fontFamily="@font/staatliches"
@@ -73,9 +90,9 @@
             android:textAllCaps="false"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/sequencegamebutton"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/numbergamebutton"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
